<resources>
    <string name="app_name">TesT</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">email</string>
    <string name="enter_your_email">Enter your e-mail</string>
    <string name="confirm_password">Confirm password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don`t have an account?</string>
    <string name="splashText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tellus praesent purus tincidunt ut cursus vitae. Nisl, vitae nulla lectus tortor, est a aliquam. Pretium netus</string>
    <string name="let_s_get_things">Let`s get things done on time</string>
    <string name="get_started">Get Started</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="we_help_you">We help you meet up you tasks on time</string>
    <string name="welcome_onboard">Welcome Onboard!</string>
    <string name="welcome_anand">Welcome Anand!</string>
</resources>